new blog layout

--- a/src/posts/2024-in-review.mdx
+++ b/src/posts/2024-in-review.mdx
@@ -4,7 +4,7 @@ export const title = '2024 In Review';
 export const slug = '2024-in-review';
 export const tags = [];
 export const description =
-  'A look back on 2024 and what it entailed for me and this blog!';
+  "2024 was a busy year! I look back on what it entailed for me and this blog, and what I'm looking forward to in 2025!";
 export const cover = 'rainbow-2024-cover.png';
 export const published = new Date(2024, 11, 31);
 export const shortCodes = ['2024-review'];
