--- a/src/posts/product-focused-software-engineer.mdx
+++ b/src/posts/product-focused-software-engineer.mdx
@@ -2,31 +2,26 @@ export const title = 'What is a Product-Focused Software Engineer?';
 export const slug = 'what-is-a-product-focused-software-engineer';
 export const tags = ['opinion', 'career'];
 export const description =
-  'For the last few years, I\'ve called myself a "product-focused software engineer." But what does that mean?';
+  'Job descriptions and titles can be tricky! For the last few years, I\'ve called myself a "product-focused software engineer." What does that mean to me, and why do I like the term?';
 export const cover = 'product-focused-engineer-cover-compressed.png';
-export const published = new Date(2025, 3, 25);
+export const published = new Date(2025, 5, 4);
 export const shortCodes = ['product-focused'];
 export const bskyThreadId = '';
 
-I've called myself many things over the course of my career so far. I've been a "web developer,"
-a "full stack developer," a "frontend engineer," and a "software engineer," just to name a few.
-Lately, I've taken to calling myself a "product-focused software engineer." Before I dive in to
-what that means to me, I want to look at why those other terms didn't quite cut it for me.
+I've struggled over the years to describe exactly the kind of software development I do. I've referred to myself as a full-stack developer, a web developer, frontend engineer, and more. Right now, my current title at [Kizen](https://kizen.com) is "principal front-end engineer." However, none of those descriptions really explain anything about what I do to someone who doesn't know me.
 
-## What's in a Name?
+_Web developer_ evokes (to me) a certain image of the early days of the web - making simple web pages maybe for a local business or organization. That's definitely not all that I do, and it's not even the most fun part of my work.
 
-I'm about to write (and hopefully you're about to read) quite a few words about what made-up
-title I call myself. Why does it matter? Maybe it doesn't. At the end of the day, I'm going
-to be writing code to solve problems no matter how I frame it.
+_Full-stack developer_ is a pretty loaded term, but usually it seems to mean "jack of all trades, and master of none."
 
-But, I think there's something to be said for carefully choosing how to frame my role and my work. There
-was a time that if you asked me what I did for work, I'd say I was a web developer. I was maintaining Wordpress sites,
-building themes and plugins, and maybe writing a few plugins here and there. That's a far cry from the
-kind of engineering work I do today. I'm not _not_ a web developer, but there came a time where I didn't identify
-as much with that title.
+_Front-end engineer_ is better, but it still implies a certain lack of depth in my knowledge - and most people equate it with the "web developer" term. I don't like _full-stack developer_, but I do work on more of the stack than just the front-end (a term which can be hard to define in and of itself).
 
-> I think there's something to be said for carefully choosing how I frame my role and my work.
+So, all that in mind, a couple years ago I started calling myself a "product-focused software engineer." You can see it right there on my [home page](https://keegan.codes)! I don't remember where I first heard this term, but as soon as I did, it resonated with me. That's what I do! I build products - not just isolated features, not just pretty buttons and color choices, not just single static web pages, and not even just code that runs in the user's browser.
 
-## What's a Full-Stack Developer Anyways?
+My favorite projects are ones where I can take a holistic approach. Ones where I can understand the users' needs, plan a solution, architect it, and then design it and execute on it! All along the way, my primary focus is on attention to the small details. How can a piece of software be more accessible, more efficient, more beautiful, more fun, and of course, more effective? These are the questions I enjoy answering the most as a software engineer.
 
-One of the more prolific terms I see is "full-stack developer." I tried this one out for a while
+So, **product-focused software engineer** it is! At least for now...
+
+---
+
+How do you describe the work you do? In my experience it tends to be highly personal, and doesn't always align with an official job title. I'd love to hear what you think!
