--- a/src/posts/product-focused-software-engineer.mdx
+++ b/src/posts/product-focused-software-engineer.mdx
@@ -10,11 +10,11 @@ export const bskyThreadId = '';
 
 I've struggled over the years to describe exactly the kind of software development I do. I've referred to myself as a full-stack developer, a web developer, frontend engineer, and more. Right now, my current title at [Kizen](https://kizen.com) is "principal front-end engineer." However, none of those descriptions really explain anything about what I do to someone who doesn't know me.
 
-_Web developer_ evokes (to me) a certain image of the early days of the web - making simple web pages maybe for a local business or organization. That's definitely not all that I do, and it's not even the most fun part of my work.
+_Web developer_ evokes (to me) a certain image of the halcyon days of the web - back when things were simpler and didn't require so much complexity. It doesn't really communicate the depth of my skills or even indicate what I focus on. Traditional "web development" isn't even the most fun part of my work. Maybe it's too similar to _webmaster_ too.
 
-_Full-stack developer_ is a pretty loaded term, but usually it seems to mean "jack of all trades, and master of none."
+_Full-stack developer_ is a pretty loaded term, but usually it seems to mean "jack of all trades, and master of none." While I do technically work across the full "stack," I've ditched that term for a while now.
 
-_Front-end engineer_ is better, but it still implies a certain lack of depth in my knowledge - and most people equate it with the "web developer" term. I don't like _full-stack developer_, but I do work on more of the stack than just the front-end (a term which can be hard to define in and of itself).
+_Front-end engineer_ is better, but it still implies a certain lack of depth in my knowledge - and most people equate it with the "web developer" term. I don't like _full-stack developer_ (see above), but I also don't want to be pigeonholed into only writing Javascript, HTML, and CSS for front-end (a term which can be hard to define in and of itself).
 
 So, all that in mind, a couple years ago I started calling myself a "product-focused software engineer." You can see it right there on my [home page](https://keegan.codes)! I don't remember where I first heard this term, but as soon as I did, it resonated with me. That's what I do! I build products - not just isolated features, not just pretty buttons and color choices, not just single static web pages, and not even just code that runs in the user's browser.
 
