--- a/src/posts/product-focused-software-engineer.mdx
+++ b/src/posts/product-focused-software-engineer.mdx
@@ -6,7 +6,7 @@ export const description =
 export const cover = 'product-focused-engineer-cover-compressed.png';
 export const published = new Date(2025, 5, 4);
 export const shortCodes = ['product-focused'];
-export const bskyThreadId = '';
+export const bskyThreadId = '3lqsskjrpu22r';
 
 I've struggled over the years to describe exactly the kind of software development I do. I've referred to myself as a full-stack developer, a web developer, frontend engineer, and more. Right now, my current title at [Kizen](https://kizen.com) is "principal front-end engineer." However, none of those descriptions really explain anything about what I do to someone who doesn't know me.
 
