--- a/src/app/resume/resume.mdx
+++ b/src/app/resume/resume.mdx
@@ -9,7 +9,7 @@ import {
 
 # <FontAwesomeIcon icon={faPencil} /> Skills Summary
 
-Software developer with 9 years of experience with JavaScript and Typescript
+Software developer with 10 years of experience with JavaScript and Typescript
 development for the web using modern software stacks, including but not limited
 to Next.js, React, Redux, CI/CD platforms, Amazon Web Services, UI testing, and Google
 Cloud. Design experience includes Adobe Photoshop, Illustrator, and Figma. A
@@ -20,9 +20,12 @@ lifelong learner always looking for the next way to
 
 ### [Sonoma State University](https://cs.sonoma.edu/)
 
-**Bachelor of Science in Computer Science** | May 2019
+**Bachelor of Science in Computer Science** | Graduated May 2019
 
 Computer Science GPA: 3.99 | Overall GPA: 3.905 | Computer Science Club President
+
+- Studies focused on Python, C, C++, and Javascript, as well as software architecture, computing principles, compiler design, and research in the field of human-computer interaction.
+- As computer science club president, a strong emphasis was placed on community engagement through hosting large-scale hackathons and other events.
 
 # <FontAwesomeIcon icon={faBriefcase} /> Work Experience
 
@@ -30,20 +33,25 @@ Computer Science GPA: 3.99 | Overall GPA: 3.905 | Computer Science Club Presiden
 
 **Principal Front-End Engineer** / March 2023 – Present
 
-As a principal engineer, duties are expanded to include working on coordinating
-projects and writing tickets to ensure features are delivered to customers on time
-and with a high quality of work.
+As a principal engineer, duties include coordinating
+projects and planning work to ensure features are delivered to customers on time
+and with a high quality of work, while in parallel spending a majority of the time on implementation of critical features and
+platform improvements.
+
+- Led a project to build an advanced self-service billing model to drive revenue through product-led growth and free trial accounts.
+- Built a powerful, flexible, and secure plugin engine for extending the capabilities of the core Kizen platform, and enabled developers to build and deploy their own applications.
+- Led a developer enablement effort to expand the capability of the plugin ecosystem and allow third-party developers to easily build with Kizen.
 
 <br />
 
 **Senior Front-End Engineer** / January 2022 – March 2023
 
-Work primarily consists of working on the the front-end for the core product,
-with a focus on using React to build the application dashboard to allow users
+Work primarily consisted of working on the the front-end for the core product,
+with a focus on using React to build the business intelligence dashboard to allow users
 to visualize data through a series of charts. Strong emphasis on building performant
 UIs that are capable of quickly and efficiently rendering large amounts of data.
 
-### [Pinpoint Software](https://pinpoint.com)
+### [Pinpoint Software](https://www.crunchbase.com/organization/pinpoint-com)
 
 **Software Developer** / June 2017 – January 2022
 
