update to some new font treatments

--- a/src/posts/product-focused-software-engineer.mdx
+++ b/src/posts/product-focused-software-engineer.mdx
@@ -2,7 +2,7 @@ export const title = 'What is a Product-Focused Software Engineer?';
 export const slug = 'what-is-a-product-focused-software-engineer';
 export const tags = ['opinion', 'career'];
 export const description =
-  'Job descriptions and titles can be tricky! For the last few years, I\'ve called myself a "product-focused software engineer." What does that mean to me, and why do I like the term?';
+  'Job descriptions and titles can be tricky! For the last few years, I\'ve called myself a "product-focused software engineer." What does that mean to me?';
 export const cover = 'product-focused-engineer-cover-compressed.png';
 export const published = new Date(2025, 5, 4);
 export const shortCodes = ['product-focused'];
