add bsky thread

--- a/src/posts/lines-of-code-productivity-metric.mdx
+++ b/src/posts/lines-of-code-productivity-metric.mdx
@@ -19,7 +19,7 @@ export const shortCodes = [
   'lines-of-code-productivity',
   'ai-productivity',
 ];
-export const bskyThreadId = '';
+export const bskyThreadId = '3me267qhzsk26';
 
 **_More lines of code is not an indicator of a better developer!_**
 
