update post content

--- a/src/posts/an-update-for-2026.mdx
+++ b/src/posts/an-update-for-2026.mdx
@@ -1,10 +1,72 @@
+import { Definition } from '../components/Definition';
+
 export const title = 'An Update for 2026 and Beyond';
 export const slug = 'an-update-for-2026-and-beyond';
-export const tags = ['javascript'];
-export const description = 'Description';
-export const cover = 'cover';
-export const published = new Date(2026, 0, 21);
+export const tags = ['opinion', 'update'];
+export const description =
+  "Taking a moment for a little update on my life, where I've been for the last year, and what's next!";
+export const cover = '2026-cover.png';
+export const published = new Date(2026, 1, 5);
 export const shortCodes = ['2026-update', 'update-for-2026'];
 export const bskyThreadId = '';
 
-If you've been following my blog for a while, you may have noticed I was unusually quiet in this space for 2025.
+If you've been following my blog for a while, you may have noticed I was unusually quiet in this space for 2025. I had a busy year
+in both my career and my personal life, so unfortunately conferences, blog posts, and some hobbies had to take a back seat.
+
+## What Happened in 2025?
+
+There was a lot that happened in 2025, and frankly, most of it was way more fun than sitting in my office writing...
+
+### I Got Married!
+
+![](2026-post-wedding.jpg)
+
+![](2026-post-wedding-2.jpg)
+
+Turns out planning a wedding in a city you don't live in takes a lot of time and energy. Who would've thought?
+
+### I Learned to Ski!
+
+![](2026-post-skiing.jpeg)
+
+Another hobby for the list! We went for a second trip at the start of this year, and I think it's here to stay!
+
+### I Ramped Up My Cycling!
+
+![](2026-post-bike.jpeg)
+
+I completed my first <Definition>century ride</Definition> at the [Trek 100 in Fort Worth](https://www.strava.com/activities/15880758629), and cycled around 5,000 miles in total for the year.
+I also got way more into indoor training for those days when the Texas weather is less than ideal.
+
+### I Started Building a Developer Platform at [Kizen](https://kizen.com/)
+
+2025 was the year I started focusing most of my time at work on building a plugin engine, app marketplace, and developer platform at Kizen.
+
+This is the kind of platform I've wanted to build for a long time. It's a complex project that I get to own from end-to-end, so it's been quite
+the unique challenge in my career!
+
+## My Plans for 2026
+
+I don't expect this year to be any less busy, but I am absolutely going to focus on writing more of my thoughts here.
+I enjoy putting my thoughts down in written form. As before, I'll never be posting AI-written content here. Writing
+is as much a hobby of mine as coding or cycling!
+
+### Some Topics I Want to Focus on This Year:
+
+1. More **fitness/connected fitness**. I've writte some [content like this](/blog/my-connected-fitness-tools-part-2) before, but it's been a while now. I've expanded the sports I enjoy since the last time around!
+2. More about **my work at Kizen** and our developer platform. I've been teasing this for a while, but it's almost time to show and tell what I've been working on!
+3. **Coding agents/AI/LLMs** and how they fit into modern software development. [My first post of the year](/blog/lines-of-code-as-a-productivity-metric-ai-era) has already touched on some of my initial thoughts here.
+4. More **short-form content**. Most of these posts take me hours to write, proofread, design graphics for, etc. I'd like to focus on getting my thoughts out more frequently and with fewer words.
+5. **Front-end design patterns and interesting solutions**. My work these days at Kizen is pretty low-level work on the plugin engine, deployment pipelines, etc. I want to get back to writing about front-end software development as it relates to HTML, Javascript, CSS, and modern solutions as the langages evolve.
+
+### Other goals for 2026:
+
+I've set myself a goal to cycle 7,000 miles over the course of the year. I've also started running and want to improve my skills there.
+
+I plan on getting back to attending more conferences like [Render Atlanta](/blog/recap-render-24) and [React Miami](/blog/react-miami-2024-recap). I missed spending time in the community last year when things got too busy to travel.
+
+After speaking on a panel at [San Antonio Startup Week](/blog/sasw-2024) it got me excited about sharing what I know through conference talks. Maybe there will be some of that in my future too this year!
+
+---
+
+With this post I've already written more this year than I did in all of 2025. So far I'd say the year is off to a good start!
