--- a/src/posts/an-update-for-2026.mdx
+++ b/src/posts/an-update-for-2026.mdx
@@ -23,6 +23,8 @@ There was a lot that happened in 2025, and frankly, most of it was way more fun 
 
 ![](2026-post-wedding-2.jpg)
 
+![](2026-post-wedding-3.jpg)
+
 Turns out planning a wedding in a city you don't live in takes a lot of time and energy. Who would've thought?
 
 ### I Learned to Ski!
@@ -38,12 +40,23 @@ Another hobby for the list! We went for a second trip at the start of this year,
 I completed my first <Definition>century ride</Definition> at the [Trek 100 in Fort Worth](https://www.strava.com/activities/15880758629), and cycled around 5,000 miles in total for the year.
 I also got way more into indoor training for those days when the Texas weather is less than ideal.
 
+While riding I started recording some [scenic ride videos](https://www.youtube.com/playlist?list=PL-L9ZMFGAqMFzN0oRj_ERlIFvKHE5r0lB). I like to put them on while I'm on the trainer, or use them as custom scenic rides on the Peloton for my wife!
+
 ### I Started Building a Developer Platform at [Kizen](https://kizen.com/)
 
 2025 was the year I started focusing most of my time at work on building a plugin engine, app marketplace, and developer platform at Kizen.
 
 This is the kind of platform I've wanted to build for a long time. It's a complex project that I get to own from end-to-end, so it's been quite
-the unique challenge in my career!
+the unique challenge in my career! It brings together developer experience, deployment automation through Github Apps, code execution through web workers,
+and many more complexities. I hope you'll get to hear more very soon!
+
+### So. Much. Roadtripping.
+
+My wife and I took a road trip from Texas to the California Bay Area to visit my family for 3 weeks over the holidays. We brought the dogs, my bike, and what felt like our whole life. Then we drove to down Los Angeles and back up to the bay.
+After driving back to Texas, we were back on the road next week to Crested Butte, CO to ski, then Santa Fe New Mexico, then home again. Needless to say I've been
+minimizing time in the car ever since.
+
+![](2026-post-roadtrip.jpg)
 
 ## My Plans for 2026
 
@@ -53,11 +66,11 @@ is as much a hobby of mine as coding or cycling!
 
 ### Some Topics I Want to Focus on This Year:
 
-1. More **fitness/connected fitness**. I've writte some [content like this](/blog/my-connected-fitness-tools-part-2) before, but it's been a while now. I've expanded the sports I enjoy since the last time around!
+1. More **fitness/connected fitness**. I've written some [content like this](/blog/my-connected-fitness-tools-part-2) before, but it's been a while now. I've expanded the sports I enjoy since the last time around!
 2. More about **my work at Kizen** and our developer platform. I've been teasing this for a while, but it's almost time to show and tell what I've been working on!
 3. **Coding agents/AI/LLMs** and how they fit into modern software development. [My first post of the year](/blog/lines-of-code-as-a-productivity-metric-ai-era) has already touched on some of my initial thoughts here.
 4. More **short-form content**. Most of these posts take me hours to write, proofread, design graphics for, etc. I'd like to focus on getting my thoughts out more frequently and with fewer words.
-5. **Front-end design patterns and interesting solutions**. My work these days at Kizen is pretty low-level work on the plugin engine, deployment pipelines, etc. I want to get back to writing about front-end software development as it relates to HTML, Javascript, CSS, and modern solutions as the langages evolve.
+5. **Front-end design patterns and interesting solutions**. My work these days at Kizen is pretty low-level work on the plugin engine, deployment pipelines, etc. I want to get back to writing about front-end software development as it relates to HTML, Javascript, CSS, and modern solutions as the standards and tools evolve.
 
 ### Other goals for 2026:
 
@@ -65,7 +78,7 @@ I've set myself a goal to cycle 7,000 miles over the course of the year. I've al
 
 I plan on getting back to attending more conferences like [Render Atlanta](/blog/recap-render-24) and [React Miami](/blog/react-miami-2024-recap). I missed spending time in the community last year when things got too busy to travel.
 
-After speaking on a panel at [San Antonio Startup Week](/blog/sasw-2024) it got me excited about sharing what I know through conference talks. Maybe there will be some of that in my future too this year!
+After speaking on a panel at [San Antonio Startup Week](/blog/sasw-2024) back in 2024, it got me excited about sharing my experience through conference talks. Maybe there will be some of that in my future too this year if the stars align!
 
 ---
 
