add image alt text

--- a/src/posts/an-update-for-2026.mdx
+++ b/src/posts/an-update-for-2026.mdx
@@ -19,23 +19,23 @@ There was a lot that happened in 2025, and frankly, most of it was way more fun 
 
 ### I Got Married!
 
-![](2026-post-wedding.jpg)
+![A photo of me and my wife in a suit and wedding dress in front of a large tree](2026-post-wedding.jpg)
 
-![](2026-post-wedding-2.jpg)
+![A photo of me and my wife in a suit and wedding dress at our wedding ceremony with green ivy in the background](2026-post-wedding-2.jpg)
 
-![](2026-post-wedding-3.jpg)
+![A photo of me and my wife in traditional Chinese red and gold outfits wearing red sunglasses, being a bit goofy and pointing at each other smiling](2026-post-wedding-3.jpg)
 
 Turns out planning a wedding in a city you don't live in takes a lot of time and energy. Who would've thought?
 
 ### I Learned to Ski!
 
-![](2026-post-skiing.jpeg)
+![A photo of me and my wife on a ski lift in snow clothes, helmets, and ski goggles](2026-post-skiing.jpeg)
 
 Another hobby for the list! We went for a second trip at the start of this year, and I think it's here to stay!
 
 ### I Ramped Up My Cycling!
 
-![](2026-post-bike.jpeg)
+![A photo of me in my cycling kit that's orange and black, standing with my wife who holds a sign that reads "Want me to call you an uber?"](2026-post-bike.jpeg)
 
 I completed my first <Definition>century ride</Definition> at the [Trek 100 in Fort Worth](https://www.strava.com/activities/15880758629), and cycled around 5,000 miles in total for the year.
 I also got way more into indoor training for those days when the Texas weather is less than ideal.
@@ -56,7 +56,7 @@ My wife and I took a road trip from Texas to the California Bay Area to visit my
 After driving back to Texas, we were back on the road next week to Crested Butte, CO to ski, then Santa Fe New Mexico, then home again. Needless to say I've been
 minimizing time in the car ever since.
 
-![](2026-post-roadtrip.jpg)
+![A photo from my Insta360 X5 showing me in the passenger seat of an SUV, and a close-up of my long-haired German Shepherd dog in the back seat](2026-post-roadtrip.jpg)
 
 ## My Plans for 2026
 
