--- a/src/posts/an-update-for-2026.mdx
+++ b/src/posts/an-update-for-2026.mdx
@@ -8,7 +8,7 @@ export const description =
 export const cover = '2026-cover.png';
 export const published = new Date(2026, 1, 5);
 export const shortCodes = ['2026-update', 'update-for-2026'];
-export const bskyThreadId = '';
+export const bskyThreadId = '3me553d62fs25';
 
 If you've been following my blog for a while, you may have noticed I was unusually quiet in this space for 2025. I had a busy year
 in both my career and my personal life, so unfortunately conferences, blog posts, and some hobbies had to take a back seat.
@@ -58,21 +58,25 @@ minimizing time in the car ever since.
 
 ![A photo from my Insta360 X5 showing me in the passenger seat of an SUV, and a close-up of my long-haired German Shepherd dog in the back seat](2026-post-roadtrip.jpg)
 
-## My Plans for 2026
+## My Plans for 2026 & Beyond
 
 I don't expect this year to be any less busy, but I am absolutely going to focus on writing more of my thoughts here.
 I enjoy putting my thoughts down in written form. As before, I'll never be posting AI-written content here. Writing
 is as much a hobby of mine as coding or cycling!
 
-### Some Topics I Want to Focus on This Year:
+### Some Topics I Want to Focus on:
+
+I may not get to all of these right away this year, but this is a good roadmap for the future and the kinds of things you can expect to find here:
 
 1. More **fitness/connected fitness**. I've written some [content like this](/blog/my-connected-fitness-tools-part-2) before, but it's been a while now. I've expanded the sports I enjoy since the last time around!
 2. More about **my work at Kizen** and our developer platform. I've been teasing this for a while, but it's almost time to show and tell what I've been working on!
 3. **Coding agents/AI/LLMs** and how they fit into modern software development. [My first post of the year](/blog/lines-of-code-as-a-productivity-metric-ai-era) has already touched on some of my initial thoughts here.
 4. More **short-form content**. Most of these posts take me hours to write, proofread, design graphics for, etc. I'd like to focus on getting my thoughts out more frequently and with fewer words.
 5. **Front-end design patterns and interesting solutions**. My work these days at Kizen is pretty low-level work on the plugin engine, deployment pipelines, etc. I want to get back to writing about front-end software development as it relates to HTML, Javascript, CSS, and modern solutions as the standards and tools evolve.
+6. More **hobby electronics** and other types of physical making, like the [book quote clock I made for my wife](/blog/designing-and-building-a-raspberry-pi-based-book-quote-clock) a few years ago.
+7. More **travel content** like my [trip to Barcelona](/blog/trip-to-europe-part-i-barcelona)! I don't have much interest in being a run-of-the-mill travel blogger, so expect a lot of intersection with technology and fitness.
 
-### Other goals for 2026:
+### Other Goals For The Future:
 
 I've set myself a goal to cycle 7,000 miles over the course of the year. I've also started running and want to improve my skills there.
 
